# File-sharing

./: CMakeLists.txt  CMakeLists.txt.user.6deed25  CMakeLists.txt.user.feac54d  Client.qml  HotspotClient.qml  Main.qml  Resources.qrc  Server.qml  filepathmanager.cpp  filepathmanager.h  hotspotchat.cpp  hotspotchat.h  hproto.h  main.cpp  tcpclienthandler.cpp  tcpclienthandler.h  tcpserverhandler.cpp  tcpserverhandler.h
qr/: CMakeLists.txt  qrgenerator.cpp  qrgenerator.h
tests/: CMakeLists.txt  tst_tcpserverhandler.cpp
